--- a/PostSys/Views/Account/Register.cshtml
+++ b/PostSys/Views/Account/Register.cshtml
@@ -141,7 +141,7 @@
 
 
                     <div class="input-group mb-4">
-                        @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "",new { @class = "form-control" })
+                        @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, "Choose Roles",new { @class = "form-control" })
                     </div>
 
 
