--- a/PostSys/Views/Account/Login.cshtml
+++ b/PostSys/Views/Account/Login.cshtml
@@ -64,7 +64,7 @@
 <html lang="en">
 
 <head>
-	<title>Datta Able Free Bootstrap 4 Admin Template</title>
+	<title>Login's CMS</title>
 	<!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 10]>
