--- a/PostSys/Views/Admins/Index.cshtml
+++ b/PostSys/Views/Admins/Index.cshtml
@@ -76,6 +76,22 @@
                         </li>
 
                     </ul>
+                    <ul class="nav pcoded-inner-navbar">
+                        <li class="nav-item pcoded-menu-caption">
+                            <label>Login as: </label>
+                        </li>
+                        <li>
+                            <a href="~/Home/Index" class="nav-link"><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">@Html.DisplayName("Hello " + User.Identity.GetUserName() + "!")</span></a>
+                        </li>
+                        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "nav pcoded-inner-navbar" }))
+                        {
+
+                            <li>
+                                @Html.AntiForgeryToken()
+                                <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link"><span class="pcoded-micon"><i class="feather icon-log-out"></i></span><span class="pcoded-mtext"></span></a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -104,27 +120,7 @@
                             <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="icon feather icon-settings"></i>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right profile-notification">
-                                <div class="pro-head">
-                                    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <img src="~/FrontEnd/assets/images/user/avatar-2.jpg" class="img-radius" alt="User-Profile-Image">
-                                        <span>
-                                            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "DashBoard", "Home")
-                                        </span>
-                                        <a href="javascript:document.getElementById('logoutForm').submit()" class="dud-logout" title="Logout">
-                                            <i class="feather icon-log-out"></i>
-                                        </a>
-                                    }
-                                </div>
-                                <ul class="pro-body">
-                                    <li><a href="javascript:" class="dropdown-item"><i class="feather icon-settings"></i> Settings</a></li>
-                                    <li><a href="javascript:" class="dropdown-item"><i class="feather icon-user"></i> Profile</a></li>
-                                    <li><a href="message.html" class="dropdown-item"><i class="feather icon-mail"></i> My Messages</a></li>
-                                    <li><a href="auth-signin.html" class="dropdown-item"><i class="feather icon-lock"></i> Lock Screen</a></li>
-                                </ul>
-                            </div>
+                           
                         </div>
                     </li>
                 </ul>
