--- a/PostSys/Views/Posts/ListComment.cshtml
+++ b/PostSys/Views/Posts/ListComment.cshtml
@@ -112,6 +112,22 @@
                             <a href="~/Deadlines/ListDeadline" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Deadlines</span></a>
                         </li>
                     </ul>
+                    <ul class="nav pcoded-inner-navbar">
+                        <li class="nav-item pcoded-menu-caption">
+                            <label>Login as: </label>
+                        </li>
+                        <li>
+                            <a href="~/Home/Index" class="nav-link"><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">@Html.DisplayName("Hello " + User.Identity.GetUserName() + "!")</span></a>
+                        </li>
+                        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "nav pcoded-inner-navbar" }))
+                        {
+
+                            <li>
+                                @Html.AntiForgeryToken()
+                                <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link"><span class="pcoded-micon"><i class="feather icon-log-out"></i></span><span class="pcoded-mtext"></span></a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -134,36 +150,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li><a href="javascript:" class="full-screen" onclick="javascript:toggleFullScreen()"><i class="feather icon-maximize"></i></a></li>
                 </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li>
-                        <div class="dropdown drp-user">
-                            <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="icon feather icon-settings"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right profile-notification">
-                                <div class="pro-head">
-                                    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <img src="~/FrontEnd/assets/images/user/avatar-2.jpg" class="img-radius" alt="User-Profile-Image">
-                                        <span>
-                                            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "DashBoard", "Home")
-                                        </span>
-                                        <a href="javascript:document.getElementById('logoutForm').submit()" class="dud-logout" title="Logout">
-                                            <i class="feather icon-log-out"></i>
-                                        </a>
-                                    }
-                                </div>
-                                <ul class="pro-body">
-                                    <li><a href="javascript:" class="dropdown-item"><i class="feather icon-settings"></i> Settings</a></li>
-                                    <li><a href="javascript:" class="dropdown-item"><i class="feather icon-user"></i> Profile</a></li>
-                                    <li><a href="message.html" class="dropdown-item"><i class="feather icon-mail"></i> My Messages</a></li>
-                                    <li><a href="auth-signin.html" class="dropdown-item"><i class="feather icon-lock"></i> Lock Screen</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+               
             </div>
         </header>
         <!-- [ Header ] end -->
