--- a/PostSys/Views/Assignments/SubmitPost.cshtml
+++ b/PostSys/Views/Assignments/SubmitPost.cshtml
@@ -184,7 +184,7 @@
                                                         <button class="btn btn-primary" onclick="SendEmail()">Submit</button>
                                                     </div>
 
-                                                    <script>
+                                                    @*<script>
                                                         var SendEmail = function () {
                                                             $.ajax({
                                                                 type: "Post",
@@ -192,7 +192,7 @@
 
                                                             })
                                                         }
-                                                    </script>
+                                                    </script>*@
                                                 }
                                                 else
                                                 {
