--- a/PostSys/Views/Courses/ListCourses.cshtml
+++ b/PostSys/Views/Courses/ListCourses.cshtml
@@ -74,7 +74,7 @@
                             <label>Marketing Manager's Functions</label>
                         </li>
                         <li>
-                            <a href="~/Faculties/CreateFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Faculities</span></a>
+                            <a href="~/Faculties/CreateFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Faculties</span></a>
                         </li>
                         <li>
                             <a href="~/Classes/CreateClass" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Classes</span></a>
@@ -89,7 +89,7 @@
                             <a href="~/GuestZones/ListGuest" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Guests</span></a>
                         </li>
                         <li>
-                            <a href="~/Faculties/ListFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Faculities</span></a>
+                            <a href="~/Faculties/ListFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Faculties</span></a>
                         </li>
                         <li>
                             <a href="~/Classes/ListClasses" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Classes</span></a>
