--- a/PostSys/Views/Faculties/ListFaculty.cshtml
+++ b/PostSys/Views/Faculties/ListFaculty.cshtml
@@ -74,7 +74,7 @@
                             <label>Marketing Manager's Functions</label>
                         </li>
                         <li>
-                            <a href="~/Faculties/CreateFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Faculities</span></a>
+                            <a href="~/Faculties/CreateFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Faculties</span></a>
                         </li>
                         <li>
                             <a href="~/Classes/CreateClass" class="nav-link "><span class="pcoded-micon"><i class="feather icon-arrow-right"></i></span><span class="pcoded-mtext">Create Classes</span></a>
@@ -89,7 +89,7 @@
                             <a href="~/GuestZones/ListGuest" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Guests</span></a>
                         </li>
                         <li>
-                            <a href="~/Faculties/ListFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Faculities</span></a>
+                            <a href="~/Faculties/ListFaculty" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Faculties</span></a>
                         </li>
                         <li>
                             <a href="~/Classes/ListClasses" class="nav-link "><span class="pcoded-micon"><i class="feather icon-list"></i></span><span class="pcoded-mtext">List Classes</span></a>
@@ -170,7 +170,7 @@
                                             </div>
                                             <ul class="breadcrumb">
                                                 <li class="breadcrumb-item"><a href="~/Home/Index"><i class="feather icon-home"></i></a></li>
-                                                <li class="breadcrumb-item"><a href="javascript:">List Faculities</a></li>
+                                                <li class="breadcrumb-item"><a href="javascript:">List Faculties</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                 <div class="col-xl-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5> List Faculities</h5>
+                                            <h5> List Faculties</h5>
                                         </div>
                                         <div class="card-block table-border-style">
                                             @using (Html.BeginForm("ListFaculty", "Faculties", FormMethod.Get))
